[package]
name = "lamco-rdp-server"
version = "1.4.2"
edition = "2024"
rust-version = "1.88"
authors = ["Greg Lamberson <greg@lamco.io>"]
description = "Wayland RDP server - Portal mode for Linux desktop sharing"
license = "BUSL-1.1"
repository = "https://github.com/lamco-admin/lamco-rdp-server"
homepage = "https://www.lamco.ai"
keywords = ["rdp", "wayland", "remote-desktop", "linux", "screen-sharing"]
categories = ["network-programming", "multimedia"]

[[bin]]
name = "lamco-rdp-server"
path = "src/main.rs"

[[bin]]
name = "lamco-rdp-server-gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[lib]
name = "lamco_rdp_server"
path = "src/lib.rs"

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Lamco crates (published to crates.io)
# -----------------------------------------------------------------------------
# NOTE: Clipboard crates are bundled as path deps because [patch.crates-io]
# redirects all ironrdp crates to upstream git (ironrdp-egfx unpublished).
# If clipboard crates used crates.io versions, they'd link against a
# different ironrdp-cliprdr than the rest of the binary, causing trait
# diamond conflicts. Once ironrdp-egfx is published to crates.io and
# the [patch] section is removed, clipboard crates can use crates.io.
lamco-wayland = "0.2.8"
lamco-rdp = "0.5.1"
lamco-portal = { version = "0.3.2", features = ["dbus-clipboard"] }
lamco-pipewire = { version = "0.3.1", features = ["audio", "damage"] }
lamco-video = "0.1.4"
lamco-rdp-input = "0.1.2"
# Clipboard crates - bundled (IronRDP [patch] diamond; see note above)
# Source: ~/wayland/lamco-rdp-workspace/crates/...
# Bundled: included in packaging tarball for offline builds
lamco-clipboard-core = { path = "bundled-crates/lamco-clipboard-core", features = ["image"] }
lamco-rdp-clipboard = { path = "bundled-crates/lamco-rdp-clipboard" }

# -----------------------------------------------------------------------------
# Async runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# Configuration and CLI
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }

# -----------------------------------------------------------------------------
# Logging and tracing
# -----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# -----------------------------------------------------------------------------
# Error handling
# -----------------------------------------------------------------------------
anyhow = "1.0"
thiserror = "2"

# -----------------------------------------------------------------------------
# Networking and protocols
# -----------------------------------------------------------------------------
bytes = "1.5"
rustls-pemfile = "2.2"
x509-cert = "0.2.5"
x509-parser = "0.18"

# -----------------------------------------------------------------------------
# RDP protocol (IronRDP)
# Using Devolutions/IronRDP upstream for generic AsyncRead+AsyncWrite support
# Git deps required: ironrdp-egfx is not published to crates.io
# -----------------------------------------------------------------------------
ironrdp = { git = "https://github.com/Devolutions/IronRDP", branch = "master", default-features = false, features = ["server"] }
ironrdp-server = { git = "https://github.com/Devolutions/IronRDP", branch = "master", features = ["egfx", "helper"] }
ironrdp-tokio = { git = "https://github.com/Devolutions/IronRDP", branch = "master", features = ["reqwest"] }
ironrdp-pdu = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-displaycontrol = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-cliprdr = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-core = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-dvc = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-svc = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-egfx = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-graphics = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-rdpsnd = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }

# -----------------------------------------------------------------------------
# Wayland and Portal integration
# -----------------------------------------------------------------------------
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }
wayland-protocols-misc = { version = "0.3", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
ashpd = { version = "0.12.3", features = ["tokio"] }
zbus = "5"
enumflags2 = "0.7"

# Standalone Wayland clipboard (ext-data-control / wlr-data-control protocol)
# Composable with any session strategy, not tied to portal-generic
wl-clipboard-rs = { version = "0.9.3", optional = true }

# Embedded portal backend for wlroots compositors (screencopy + input + clipboard)
# Provides video capture, input injection, and clipboard via native Wayland protocols
# without requiring xdg-desktop-portal-wlr or any external portal daemon
xdg-desktop-portal-generic = { version = "0.2.1", optional = true }

# libei/EIS protocol for Flatpak-compatible wlroots input
# Pure Rust implementation used by Smithay/COSMIC
reis = { version = "0.6", features = ["tokio"], optional = true }

# -----------------------------------------------------------------------------
# PipeWire integration (via lamco-pipewire, no direct dependency needed)
# -----------------------------------------------------------------------------

# -----------------------------------------------------------------------------
# Audio encoding (RDPSND)
# -----------------------------------------------------------------------------
# OPUS codec - royalty-free, low latency, high quality
opus2 = { version = "0.3", features = ["bundled"] }
# Byte slice casting for audio sample conversion
bytemuck = "1.14"

# -----------------------------------------------------------------------------
# Input handling
# -----------------------------------------------------------------------------
xkbcommon = "0.9"

# -----------------------------------------------------------------------------
# Image processing
# -----------------------------------------------------------------------------
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
percent-encoding = "2.3"
sha2 = "0.10"
hkdf = "0.12"

# -----------------------------------------------------------------------------
# H.264 encoding (optional, for EGFX)
# -----------------------------------------------------------------------------
# Dynamic loading of Cisco's precompiled OpenH264 binary (patent-covered).
# NEVER use features = ["source"] in shipped builds — zero patent coverage.
# See docs/decisions/H264-CODEC-STRATEGY.md
openh264 = { version = "0.9.2", optional = true, default-features = false, features = ["libloading"] }
openh264-sys2 = { version = "0.9.1", default-features = false, features = ["libloading"], optional = true }
libloading = { version = "0.8", optional = true }

# -----------------------------------------------------------------------------
# Hardware-accelerated encoding (optional)
# -----------------------------------------------------------------------------
# VA-API: Intel/AMD GPU encoding (ChromeOS bindings)
# Requires libva-dev 1.20.0+ installed
cros-libva = { version = "0.0.13", optional = true }

# NVENC: NVIDIA GPU encoding (Video Codec SDK bindings)
# Requires NVIDIA driver with libnvidia-encode.so AND CUDA toolkit
nvidia-video-codec-sdk = { version = "0.4", optional = true }
# CUDA runtime bindings for NVENC (cudarc used by nvidia-video-codec-sdk but not re-exported)
cudarc = { version = "0.16", optional = true, default-features = false, features = ["driver", "cuda-version-from-build-system"] }

# -----------------------------------------------------------------------------
# System and utilities
# -----------------------------------------------------------------------------
nix = { version = "0.30", features = ["signal", "process", "mman"] }
libc = "0.2"
fuser = "0.17"  # FUSE filesystem for clipboard file transfer
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
hostname = "0.4"
dirs = "6.0"

# -----------------------------------------------------------------------------
# Cryptography (for session token encryption)
# -----------------------------------------------------------------------------
aes-gcm = "0.10"

# -----------------------------------------------------------------------------
# Credential Storage Backends
# -----------------------------------------------------------------------------
# Secret Service API for GNOME Keyring, KWallet, KeePassXC
# Using v5.x with tokio async runtime and pure Rust crypto
secret-service = { version = "5.1", features = ["rt-tokio-crypto-rust"] }
# zeroize for secure memory handling of tokens
zeroize = "1.7"

# -----------------------------------------------------------------------------
# Memory management
# -----------------------------------------------------------------------------
memmap2 = "0.9"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# -----------------------------------------------------------------------------
# Certificate generation
# -----------------------------------------------------------------------------
rcgen = { version = "0.14", features = ["zeroize", "x509-parser"] }
time = { version = "0.3", features = ["formatting", "macros"] }

# -----------------------------------------------------------------------------
# Authentication (optional)
# -----------------------------------------------------------------------------
nonstick = { version = "0.1", optional = true }

# -----------------------------------------------------------------------------
# GUI (optional - for configuration GUI)
# -----------------------------------------------------------------------------
iced = { version = "0.14", optional = true, features = ["tokio", "advanced", "canvas", "lazy", "svg", "image"] }
rfd = { version = "0.17", optional = true, default-features = false, features = ["xdg-portal", "wayland"] }

# =============================================================================
# Dev Dependencies
# =============================================================================

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"

# =============================================================================
# Features
# =============================================================================

[features]
default = ["pam-auth", "h264", "wayland", "wl-clipboard", "portal-generic", "libei"]

# GUI for configuration (optional, adds ~40MB to binary)
gui = ["iced", "rfd"]
wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-misc", "wayland-protocols-wlr"]
libei = ["reis"]
portal-generic = ["xdg-desktop-portal-generic"]

# Standalone Wayland data-control clipboard (ext-data-control / wlr-data-control)
# Works with any session strategy. Native-only (blocked by security-context-v1 in Flatpak).
wl-clipboard = ["wl-clipboard-rs"]
pam-auth = ["nonstick"]

# H.264 software encoding via EGFX channel (dynamic loading)
# Loads Cisco's precompiled OpenH264 binary at runtime for patent compliance.
# The binary must be installed separately (e.g., libopenh264-7 on Debian).
# See docs/decisions/H264-CODEC-STRATEGY.md
h264 = ["openh264", "openh264-sys2", "libloading"]

# Development/testing only: compile OpenH264 from source (NO patent coverage).
# NEVER enable in any shipped binary.
h264-source = ["openh264", "openh264-sys2", "libloading", "openh264/source", "openh264-sys2/source"]

# Hardware-accelerated H.264 encoding (premium feature)
# VA-API: Intel (iHD/i965) and AMD (radeonsi) GPU encoding
# Requires libva-dev and GPU drivers
vaapi = ["cros-libva"]

# Hyper-V vsock transport for Enhanced Session Mode
# Requires Linux with Hyper-V vsock kernel support (vmw_vsock or hv_sock)
# Enables --vsock CLI flag for AF_VSOCK transport instead of TCP
vsock = ["tokio-vsock"]

# NVENC: NVIDIA GPU encoding via Video Codec SDK
# Requires NVIDIA driver with libnvidia-encode.so AND CUDA toolkit
nvenc = ["nvidia-video-codec-sdk", "cudarc"]

# Convenience: enable all hardware backends
hardware-encoding = ["vaapi", "nvenc"]

# Future features (not yet implemented)
# multimon = []       # Multi-monitor support

# =============================================================================
# Target-Specific Dependencies
# =============================================================================

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.4", optional = true }

# =============================================================================
# Profiles
# =============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Benchmark profile - optimized for accurate measurements
[profile.bench]
opt-level = 3
debug = false
lto = "thin"

# =============================================================================
# Benchmarks
# =============================================================================

[[bench]]
name = "video_encoding"
harness = false

[[bench]]
name = "color_conversion"
harness = false

[[bench]]
name = "damage_detection"
harness = false

# =============================================================================
# Lints
# =============================================================================

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
elided_lifetimes_in_paths = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
allow_attributes = "deny"

# Selective allows for false-positive-prone or low-value pedantic lints
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
similar_names = "allow"
items_after_statements = "allow"
redundant_else = "allow"
match_same_arms = "allow"
single_match_else = "allow"
return_self_not_must_use = "allow"
unused_self = "allow"
unused_async = "allow"
too_many_lines = "allow"
manual_is_variant_and = "allow"
bool_to_int_with_if = "allow"
struct_excessive_bools = "allow"
if_not_else = "allow"
manual_let_else = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"
manual_midpoint = "allow"
match_wildcard_for_single_variants = "allow"
ptr_as_ptr = "allow"
cast_ptr_alignment = "allow"
explicit_iter_loop = "allow"
format_push_string = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
struct_field_names = "allow"
missing_fields_in_debug = "allow"
unreadable_literal = "allow"

# Functional lints
wildcard_imports = "deny"
large_futures = "warn"

# Progressive (upgrade to "deny" when codebase is clean)
unwrap_used = "warn"
expect_used = "warn"

# Coordinate/graphics code requires numeric casting
as_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# =============================================================================
# Patches - Override transitive dependencies
# =============================================================================
#
# IronRDP upstream. Git deps required because ironrdp-egfx is not
# published to crates.io (publish = false in upstream Cargo.toml).
# All lamco contributions merged upstream via PRs #1057, #1063-1066,
# #1076, #1091-1093, #1096-1100, #1110, #1125.
#
# To eliminate this [patch] section:
# 1. Wait for Devolutions to publish ironrdp-egfx to crates.io
# 2. Remove this [patch] section
# 3. Update ironrdp-* direct deps to crates.io versions
# 4. Switch clipboard crates from bundled path deps to crates.io versions
# =============================================================================

[patch.crates-io]
# IronRDP fork with combined auth patches (PRs #1150 + #1155)
# Revert to Devolutions/IronRDP master once both PRs are merged upstream
ironrdp = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-pdu = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-server = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-graphics = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-cliprdr = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-svc = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-dvc = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-core = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-tokio = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-displaycontrol = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-egfx = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }
ironrdp-rdpsnd = { git = "https://github.com/glamberson/IronRDP", branch = "feat/combined-auth-patches" }

# NOTE: The [patch."https://github.com/glamberson/IronRDP"] section was removed
# on 2026-02-26. lamco-rdp-workspace now uses crates.io ironrdp (0.5.0+),
# so the redirect from glamberson→lamco-admin is no longer needed.
